<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nastavenia_izby"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/room_name_edit_text"
                android:hint="@string/room_name"
                android:inputType="text"
                android:importantForAutofill="no" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/ulozit_nazov"
                android:layout_margin="15dp"
                android:id="@+id/set_room_name"
                tools:ignore="MissingConstraints" />
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/person_name_edit_text"
                android:hint="@string/patient_name"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/person_age_edit_text"
                android:hint="@string/patient_age"
                android:importantForAutofill="no" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/ulozit_osobne_informacie"
                android:layout_margin="15dp"
                android:id="@+id/set_person_info"
                tools:ignore="MissingConstraints" />
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/new_illness_edit_text"
                android:hint="@string/illness_name"
                android:inputType="text"
                android:importantForAutofill="no" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/pridat_chorobu"
                android:layout_margin="15dp"
                android:id="@+id/add_illness"
                tools:ignore="MissingConstraints" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/nastavit_rizikove_hranice"
                android:layout_margin="15dp"
                android:id="@+id/set_risk_limits"
                tools:ignore="MissingConstraints" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/spät"
                android:layout_margin="15dp"
                android:layout_marginTop="30dp"
                android:id="@+id/back_on_overview"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>