<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/spodna_hranica"
            android:layout_column="1"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/horna_hranica"
            android:gravity="center"
            android:layout_column="2"
            />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/teplota"
            android:layout_column="0"
            android:gravity="center"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/temperature_condition_min"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/temperature_condition_max"
            android:importantForAutofill="no" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/vlhkost"
            android:layout_column="0"
            android:gravity="center"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/humidity_condition_min"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/humidity_condition_max"
            android:importantForAutofill="no" />
    </TableRow>



    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tlak"
            android:layout_column="0"
            android:gravity="center"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/pressure_condition_min"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/pressure_condition_max"
            android:importantForAutofill="no" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/kvalita_vzduchu"
            android:layout_column="0"
            android:gravity="center"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/voc_condition_min"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/voc_condition_max"
            android:importantForAutofill="no" />

    </TableRow>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/potvrdit"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp"
        android:id="@+id/set_conditions"/>

</TableLayout>
