<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/room_settings"
                    android:background="@drawable/settings"
                    android:contentDescription="@string/options" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/delete_room"
                    android:background="@drawable/close"
                    android:contentDescription="@string/delete_rom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/person_name"
                    android:text="@string/meno"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/person_age"
                    android:text="@string/vek"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/person_illnesses"
                    android:text="@string/choroby"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15sp"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/teplota"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        tools:ignore="MissingConstraints" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/temperatureChart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:rotation="-90"
                            app:layout_constraintDimensionRatio="1:1"
                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="10dp" />

                        <ImageView
                            android:id="@+id/open_line_chart_tmp"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/search"
                            android:contentDescription="@string/open_line_chart"
                            app:layout_constraintStart_toStartOf="@+id/temperatureChart"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/temperature_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="25sp"
                            app:layout_constraintBottom_toBottomOf="@+id/temperatureChart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/temperatureChart"
                            app:layout_constraintTop_toTopOf="@+id/temperatureChart"
                            app:layout_constraintVertical_bias="0.45"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="@string/vlhkost"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/temperatureChart"
                            app:layout_constraintVertical_bias="0.95"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/humidityChart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:rotation="-90"
                            app:layout_constraintDimensionRatio="1:1"
                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="10dp" />

                        <ImageView
                            android:id="@+id/open_line_chart_hum"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/search"
                            android:contentDescription="@string/open_line_chart"
                            app:layout_constraintStart_toStartOf="@+id/humidityChart"
                            tools:ignore="MissingConstraints" />
                        <TextView
                            android:id="@+id/humidity_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="@+id/humidityChart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/humidityChart"
                            app:layout_constraintTop_toTopOf="@+id/humidityChart"
                            app:layout_constraintVertical_bias="0.45"
                            tools:ignore="MissingConstraints" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/tlak"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        tools:ignore="MissingConstraints" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/pressureChart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:rotation="-90"
                            app:layout_constraintDimensionRatio="1:1"
                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="10dp" />

                        <ImageView
                            android:id="@+id/open_line_chart_pres"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/search"
                            android:contentDescription="@string/open_line_chart"
                            app:layout_constraintStart_toStartOf="@+id/pressureChart"
                            tools:ignore="MissingConstraints" />
                        <TextView
                            android:id="@+id/pressure_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="@+id/pressureChart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/pressureChart"
                            app:layout_constraintTop_toTopOf="@+id/pressureChart"
                            app:layout_constraintVertical_bias="0.45"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="@string/kvalita_vzduchu"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/pressureChart"
                            app:layout_constraintVertical_bias="0.95"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/resistanceChart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:rotation="-90"
                            app:layout_constraintDimensionRatio="1:1"
                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="10dp" />

                        <ImageView
                            android:id="@+id/open_line_chart_voc"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/search"
                            android:contentDescription="@string/open_line_chart"
                            app:layout_constraintStart_toStartOf="@+id/resistanceChart"
                            tools:ignore="MissingConstraints" />
                        <TextView
                            android:id="@+id/resistance_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="@+id/resistanceChart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/resistanceChart"
                            app:layout_constraintTop_toTopOf="@+id/resistanceChart"
                            app:layout_constraintVertical_bias="0.45"
                            tools:ignore="MissingConstraints" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>